Added a customer testimonial section with anonymous cat pictures as a placeholer for customer icons.

--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ body {
     height: 400px;
     width: auto;
 }
+
+#testimonial-section img {
+    height: 250px;
+    width: auto;
+}
+
+.testimonials {
+    margin-top: 75px;
+}
